fix: make login and signup cards fullscreen on small screen

--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -9,6 +9,15 @@
   justify-content: center;
   align-items: center;
 
+  @media screen and (max-height: 750px) {
+    justify-content: start;
+    background-color: $white;
+
+    &__header {
+      display: none!important;
+    }
+  }
+
   h2 {
     color: $purple;
     margin-top: 0;
