--- a/client/src/pages/Signup/Signup.scss
+++ b/client/src/pages/Signup/Signup.scss
@@ -1,48 +1,64 @@
 @import "./../../styles/global";
+
 .signup-page {
-    height: 100%;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  @media screen and (max-height: 750px) {
+    justify-content: start;
+    background-color: $white;
+
+    &__header {
+      display: none!important;
+    }
+  }
+
+  &__background {
+    position: absolute;
+    z-index: -1;
     width: 100%;
+    height: 100%;
+  }
+
+  h2 {
+    color: $purple;
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+
+  &__header {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
-    &__background {
-        position: absolute;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
+    background-image: url(./../../assets/images/Background.png);
+    width: 100%;
+    background-position-y: 86%;
+    background-size: cover;
+  }
+
+  &__form-container {
+    background-color: $white;
+    width: 100%;
+    border-radius: 16px 16px 0 0;
+    box-sizing: border-box;
+    padding: 24px;
+    flex-shrink: 0;
+  }
+
+  &__login {
+    @include body;
+    margin-bottom: 0;
+    margin-top: 24px;
+
+    span {
+      color: $red;
     }
-    h2 {
-        color: $purple;
-        margin-top: 0;
-        margin-bottom: 24px;
-    }
-    &__header {
-        flex-grow: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-image: url(./../../assets/images/Background.png);
-        width: 100%;
-        background-position-y: 86%;
-        background-size: cover;
-    }
-    &__form-container {
-        background-color: $white;
-        width: 100%;
-        border-radius: 16px 16px 0 0;
-        box-sizing: border-box;
-        padding: 24px;
-        flex-shrink: 0;
-    }
-    &__login {
-        @include body;
-        margin-bottom: 0;
-        margin-top: 24px;
-        span {
-            color: $red;
-        }
-    }
+  }
 }
